--- a/src/prototype/template/layout/base.html
+++ b/src/prototype/template/layout/base.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>{{pageTitle}}</title>
 
@@ -11,9 +12,12 @@
     <meta name="mobile-web-app-capable" content="yes">
 
     <link rel="stylesheet" href="../asset/css/site.css">
+	<link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+	<link rel="icon" type="image/png" href="https://www.incentro.com/wp-content/themes/rocketscience/asset/favicon/favicon-16x16.png" sizes="16x16">
+	<link rel="icon" type="image/png" href="https://www.incentro.com/wp-content/themes/rocketscience/asset/favicon/favicon-32x32.png" sizes="32x32">
 </head>
 <body>
-    {% block bodyContent %}bodycontent{% endblock %}
+    {% block bodyContent %} bodycontent {% endblock %}
     <script src="../asset/javascript/site.js"></script>
 </body>
 </html>
